--- a/res/layout/running_tally.xml
+++ b/res/layout/running_tally.xml
@@ -11,6 +11,34 @@
 			android:padding="3dip" />
 	</TableRow>
 	<TableRow>
+		<TextView android:text="Hours:"
+			android:padding="3dip" />
+		<TextView android:id="@+id/hours" 
+			android:gravity="right"
+			android:padding="3dip" />
+	</TableRow>
+	<TableRow>
+		<TextView android:text="Minutes"
+			android:padding="3dip" />
+		<TextView android:id="@+id/minutes" 
+			android:gravity="right"
+			android:padding="3dip" />
+	</TableRow>
+	<TableRow>
+		<TextView android:text="Seconds:"
+			android:padding="3dip" />
+		<TextView android:id="@+id/seconds"
+			android:gravity="right"
+			android:padding="3dip" />
+	</TableRow>
+	<TableRow>
+		<TextView android:text="Milliseconds:"
+			android:padding="3dip" />
+		<TextView android:id="@+id/millisecs" 
+			android:gravity="right"
+			android:padding="3dip" />
+	</TableRow>
+	<TableRow>
 		<TextView android:text="So let's break it down!  You have:"
 			android:padding="3dip" />
 			<TextView>
@@ -38,27 +66,7 @@
 			android:gravity="right"
 			android:padding="3dip" />
 	</TableRow>
-	<TableRow>
-		<TextView android:text="Hours:"
-			android:padding="3dip" />
-		<TextView android:id="@+id/hours" 
-			android:gravity="right"
-			android:padding="3dip" />
-	</TableRow>
-	<TableRow>
-		<TextView android:text="Seconds:"
-			android:padding="3dip" />
-		<TextView android:id="@+id/seconds"
-			android:gravity="right"
-			android:padding="3dip" />
-	</TableRow>
-	<TableRow>
-		<TextView android:text="Milliseconds:"
-			android:padding="3dip" />
-		<TextView android:id="@+id/millisecs" 
-			android:gravity="right"
-			android:padding="3dip" />
-	</TableRow>
+	
 		<Button android:id="@+id/btnExtra"
    		android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
