--- a/res/xml/quitit_provider.xml
+++ b/res/xml/quitit_provider.xml
@@ -3,7 +3,7 @@
   	xmlns:android="http://schemas.android.com/apk/res/android"
   	android:minWidth="294dip"
 	android:minHeight="72dip"
-	android:updatePeriodMillis="86400000"
+	android:updatePeriodMillis="100000"
 	android:initialLayout="@layout/widget"
 	android:configure="com.quitit.android.AppWidgetConfigure"
 	>
